fix: nav contents shifting on transitioning from small to large screen

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -14,10 +14,6 @@
   list-style: none;
 }
 
-.nav_list li {
-  margin: 1rem;
-}
-
 a {
   color: #000;
   text-decoration: none;
